<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- SpringBoot 版本 -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/>
    </parent>

    <groupId>com.izpan</groupId>
    <artifactId>panis-boot</artifactId>
    <version>1.0.6-SNAPSHOT</version>
    <description>PanisBoot 后台管理项目</description>

    <packaging>pom</packaging>
    <modules>
        <!-- 基础模块 -->
        <module>panis-boot-common</module>
        <!-- 基础配置模块 -->
        <module>panis-boot-infrastructure</module>
        <!-- 业务模块 -->
        <module>panis-boot-modules</module>
        <!-- 后台管理 -->
        <module>panis-boot-admin</module>
        
        <!-- PanisBoot Starter 模块 -->
        <module>panis-boot-starter</module>
    </modules>


    <!-- 资源属性 -->
    <properties>
        <!-- Java 版本 -->
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.plugin.version>3.14.0</maven.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- SpringBoot -->
        <spring.boot.version>3.5.0</spring.boot.version>

        <!-- 其他工具版本 -->
        <guava.version>33.4.8-jre</guava.version>
        <gson.version>2.13.1</gson.version>
        <logback.version>1.5.18</logback.version>
        <common.lang3.version>3.17.0</common.lang3.version>
        <common.codec.version>1.18.0</common.codec.version>
        <hutool.version>5.8.38</hutool.version>
        <freemarker.version>2.3.34</freemarker.version>

        <!-- 数据库相关版本 -->
        <mysql.version>8.4.0</mysql.version>
        <mybatis.version>3.0.4</mybatis.version>
        <druid.version>1.2.25</druid.version>
        <mybatis.plus.version>3.5.8</mybatis.plus.version>
        <mybatis.plus.generator.version>3.5.8</mybatis.plus.generator.version>
        <mybatis.dynamic.datasource.version>4.3.1</mybatis.dynamic.datasource.version>
        <commons.pool2.version>2.12.1</commons.pool2.version>
        <sharding.version>5.2.1</sharding.version>

        <!-- 安全和工具 -->
        <sa-token.version>1.43.0</sa-token.version>
        <lombok.version>1.18.38</lombok.version>
        <knife4j.version>4.5.0</knife4j.version>
        <springdoc.version>2.8.9</springdoc.version>
        <java.jwt.version>4.4.0</java.jwt.version>
        <jsr310.version>2.19.0</jsr310.version>
        <oshi.version>6.8.2</oshi.version>
        <ip2region.version>2.7.0</ip2region.version>
        <classgraph.version>4.8.179</classgraph.version>
        <snakeyaml.version>2.4</snakeyaml.version>
        <minio.version>8.5.17</minio.version>
        <fast.excel.version>1.2.0</fast.excel.version>
        <jakarta.servlet.api.version>6.1.0</jakarta.servlet.api.version>
        <org.jetbrains.annotations.version>26.0.2</org.jetbrains.annotations.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Modules -->
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-modules</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-admin</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- knife4j swagger -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.springdoc</groupId>
                        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- Jackson Datatype -->
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jsr310.version}</version>
            </dependency>

            <!-- 系统监控 Core -->
            <dependency>
                <groupId>com.github.oshi</groupId>
                <artifactId>oshi-core</artifactId>
                <version>${oshi.version}</version>
            </dependency>

            <!-- ip2region -->
            <dependency>
                <groupId>org.lionsoul</groupId>
                <artifactId>ip2region</artifactId>
                <version>${ip2region.version}</version>
            </dependency>

            <!-- 类路径扫描器 ClassGraph -->
            <dependency>
                <groupId>io.github.classgraph</groupId>
                <artifactId>classgraph</artifactId>
                <version>${classgraph.version}</version>
            </dependency>

            <!-- SnakeYAML -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>

            <!-- OSS -->
            <!-- Minio -->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>

            <!-- Fast Excel -->
            <dependency>
                <groupId>cn.idev.excel</groupId>
                <artifactId>fastexcel</artifactId>
                <version>${fast.excel.version}</version>
            </dependency>

            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>${jakarta.servlet.api.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${org.jetbrains.annotations.version}</version>
                <scope>compile</scope>
            </dependency>

            <!-- Starter Modules -->
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-code-generator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-database-mybatis-plus</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-database-mysql</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-database-redis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-database-sharding</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-excel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-job-quartz</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-oss</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.izpan</groupId>
                <artifactId>panis-boot-starter-sa-token</artifactId>
                <version>${project.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>application*.yml</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>application.yml</include>
                    <include>application-${env}.yml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.version}</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Xlint:-options</arg>
                        <arg>-J--add-opens java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>-J--add-opens java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                        <arg>-J-Dio.netty.tryReflectionSetAccessible=true</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.18.0</version>
                <configuration>
                    <!-- 只检查直接依赖，不检查传递依赖 -->
                    <processDependencies>true</processDependencies>
                    <processDependencyManagement>false</processDependencyManagement>
                    <processPlugins>false</processPlugins>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- 配置不同的profile，对应不同的生产环境 -->
    <profiles>
        <profile>
            <!-- 开发 -->
            <id>dev</id>
            <properties>
                <env>dev</env>
                <maven.test.skip>true</maven.test.skip>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <!-- 生产 -->
            <id>prod</id>
            <properties>
                <env>prod</env>
                <maven.test.skip>true</maven.test.skip>
            </properties>
        </profile>
    </profiles>

</project>